--- a/common.css
+++ b/common.css
@@ -76,7 +76,7 @@ section .title::after {
   bottom: -8px;
   left: 50%;
   font-size: 20px;
-  color: Tomato;
+  color: rgb(71, 255, 80);
   padding: 0 5px;
   background: #fff;
   transform: translateX(-50%);
@@ -93,7 +93,7 @@ section .title::after {
 }
 .navbar.sticky {
   padding: 15px 0;
-  background: tomato;
+  background: rgb(71, 255, 80);
 }
 .navbar .max-width {
   display: flex;
@@ -106,7 +106,7 @@ section .title::after {
   font-weight: 600;
 }
 .navbar .logo a span {
-  color: Tomato;
+  color: rgb(71, 255, 80);
   transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span {
@@ -125,7 +125,7 @@ section .title::after {
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  color: Tomato;
+  color: rgb(71, 255, 80);
 }
 .navbar.sticky .menu li a:hover {
   color: #fff;
@@ -149,7 +149,7 @@ section .title::after {
   bottom: 10px;
   text-align: center;
   line-height: 45px;
-  color: Tomato;
+  color: rgb(71, 255, 80);
   z-index: 9999;
   font-size: 30px;
   border-radius: 6px;
@@ -171,7 +171,7 @@ section .title::after {
 /* home section styling */
 .home {
   display: flex;
-  background: url("https://www.pixelstalk.net/wp-content/uploads/2016/05/Amazing-HD-Black-Wallpapers.jpg") no-repeat center;
+  background: url("https://www.wallpapertip.com/wmimgs/83-838381_html-wallpaper-background-code-coding-tags.jpg") no-repeat center;
   background-color: #111;
   height: 100vh;
   color: #fff;
@@ -179,52 +179,20 @@ section .title::after {
   background-size: cover;
   background-attachment: fixed;
   font-family: "Ubuntu", sans-serif;
-}
-.home .max-width {
-  width: 100%;
-  display: flex;
-}
-.home .max-width .row {
-  margin-right: 0;
-}
-.home .home-content .text-1 {
-  font-size: 27px;
-}
-.home .home-content .text-2 {
-  font-size: 75px;
-  font-weight: 600;
-  margin-left: -3px;
-}
-.home .home-content .text-3 {
-  font-size: 40px;
-  margin: 5px 0;
-}
-.home .home-content .text-3 span {
-  color: Tomato;
-  font-weight: 500;
-}
-.home .home-content a {
-  display: inline-block;
-  background: Tomato;
-  color: #fff;
-  font-size: 25px;
-  padding: 12px 36px;
-  margin-top: 20px;
-  font-weight: 400;
-  border-radius: 6px;
-  border: 2px solid Tomato;
-  transition: all 0.3s ease;
-}
-.home .home-content a:hover {
-  color: Tomato;
-  background: none;
+  display: block;
 }
 
+#Heading{
+  margin-top: 2%;
+  margin-left:2% ;
+}
+#Heading>p{
+  font-size: 40px;
+  margin-top: 3%;
+}
 /* about section styling */
 .about{
-
- 
- background-image: url("https://images.unsplash.com/photo-1523878288860-7ad281611901?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80");
+ background-image: url("https://images.unsplash.com/photo-1599239663833-4c1cdc22892a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80");
  background-size: cover;
   background-attachment: fixed;
 }
@@ -258,18 +226,18 @@ section .title::after {
 }
 .about .about-content .right a {
   display: inline-block;
-  background: Tomato;
+  background: rgb(71, 255, 80);
   color: #fff;
   font-size: 20px;
   font-weight: 500;
   padding: 10px 30px;
   margin-top: 20px;
   border-radius: 6px;
-  border: 2px solid Tomato;
+  border: 2px solid rgb(71, 255, 80);
   transition: all 0.3s ease;
 }
 .about .about-content .right a:hover {
-  color: Tomato;
+  color: rgb(71, 255, 80);
   background: none;
 }
 .about .title::after {
@@ -303,7 +271,7 @@ section .title::after {
   transition: all 0.3s ease;
 }
 .services .serv-content .card:hover {
-  background: Tomato;
+  background: rgb(71, 255, 80);
   color: #555;
   /* change*/
 }
@@ -358,18 +326,18 @@ section .title::after {
 }
 .skills .skills-content .left a {
   display: inline-block;
-  background: Tomato;
+  background: rgb(71, 255, 80);
   color: #fff;
   font-size: 18px;
   font-weight: 500;
   padding: 8px 16px;
   margin-top: 20px;
   border-radius: 6px;
-  border: 2px solid Tomato;
+  border: 2px solid rgb(71, 255, 80);
   transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover {
-  color: Tomato;
+  color: rgb(71, 255, 80);
   background: none;
 }
 .skills .skills-content .right .bars {
@@ -388,7 +356,7 @@ section .title::after {
 .skills .skills-content .right .line {
   height: 5px;
   width: 100%;
-  background: Tomato;
+  background: rgb(71, 255, 80);
   position: relative;
 }
 .skills .skills-content .right .line::before {
@@ -397,7 +365,7 @@ section .title::after {
   height: 100%;
   left: 0;
   top: 0;
-  background: Tomato;
+  background: rgb(71, 255, 80);
 }
 .skills-content .right .html::before {
   width: 90%;
@@ -428,7 +396,7 @@ section .title::after {
   transition: all 0.3s ease;
 }
 .project .carousel .card:hover {
-  background: Tomato;
+  background: rgb(71, 255, 80);
   color: #000;
   /* change */
 }
@@ -490,7 +458,7 @@ section .title::after {
   width: 250px;
   object-fit: cover;
   border-radius: 5%;
-  border: 5px solid Tomato;
+  border: 5px solid rgb(71, 255, 80);
   transition: all 0.3s ease;
 }
 .project .carousel .card:hover img {
@@ -507,7 +475,7 @@ section .title::after {
   margin: 0 5px;
   outline: none !important;
   border-radius: 50%;
-  border: 2px solid Tomato !important;
+  border: 2px solid rgb(71, 255, 80) !important;
   transition: all 0.3s ease;
 }
 .owl-dot.active {
@@ -516,7 +484,7 @@ section .title::after {
 }
 .owl-dot.active,
 .owl-dot:hover {
-  background: Tomato !important;
+  background: rgb(71, 255, 80) !important;
 }
 .skills-images {
   width: 120px;
@@ -551,7 +519,7 @@ section .title::after {
 }
 .contact .contact-content .row i {
   font-size: 25px;
-  color: Tomato;
+  color: rgb(71, 255, 80);
 }
 .contact .contact-content .info .head {
   font-weight: 500;
@@ -587,7 +555,7 @@ section .title::after {
 .contact .right form .textarea textarea {
   height: 100%;
   width: 100%;
-  border: 1px solid Tomato;
+  border: 1px solid rgb(71, 255, 80);
   border-radius: 6px;
   outline: none;
   padding: 0 15px;
@@ -618,12 +586,12 @@ section .title::after {
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: Tomato;
-  border: 2px solid Tomato;
+  background: rgb(71, 255, 80);
+  border: 2px solid rgb(71, 255, 80);
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover {
-  color: Tomato;
+  color: rgb(71, 255, 80);
   background: none;
 }
 /* footer section styling */
@@ -634,7 +602,7 @@ footer {
   text-align: center;
 }
 footer span a {
-  color: Tomato;
+  color: rgb(71, 255, 80);
   text-decoration: none;
 }
 footer span a:hover {
