--- a/common.css
+++ b/common.css
@@ -93,7 +93,7 @@ section .title::after {
 }
 .navbar.sticky {
   padding: 15px 0;
-  background: rgb(71, 255, 80);
+  background: rgba(71, 255, 80, 0.363);
 }
 .navbar .max-width {
   display: flex;
@@ -105,6 +105,7 @@ section .title::after {
   font-size: 35px;
   font-weight: 600;
 }
+
 .navbar .logo a span {
   color: rgb(71, 255, 80);
   transition: all 0.3s ease;
@@ -169,7 +170,6 @@ section .title::after {
 }
 
 /* home section styling */
-
 .home {
   display: flex;
   background: url("./src/background.gif") no-repeat center;
@@ -180,11 +180,45 @@ section .title::after {
   background-size: cover;
   background-attachment: fixed;
   font-family: "Ubuntu", sans-serif;
-  justify-content: space-between;
 }
-
-.vaibhav-pic{
-  width: 80%;
+.home .max-width {
+  width: 100%;
+  display: flex;
+}
+.home .max-width .row {
+  margin-right: 0;
+}
+.home .home-content .text-1 {
+  font-size: 27px;
+}
+.home .home-content .text-2 {
+  font-size: 75px;
+  font-weight: 600;
+  margin-left: -3px;
+}
+.home .home-content .text-3 {
+  font-size: 40px;
+  margin: 5px 0;
+}
+.home .home-content .text-3 span {
+  color: rgb(71, 255, 80);
+  font-weight: 500;
+}
+.home .home-content a {
+  display: inline-block;
+  background: rgb(71, 255, 80);
+  color: #fff;
+  font-size: 25px;
+  padding: 12px 36px;
+  margin-top: 20px;
+  font-weight: 400;
+  border-radius: 6px;
+  border: 2px solid rgb(71, 255, 80);
+  transition: all 0.3s ease;
+}
+.home .home-content a:hover {
+  color: rgb(71, 255, 80);
+  background: none;
 }
 
 #Heading{
@@ -193,13 +227,18 @@ section .title::after {
 }
 #Heading>p{
   font-size: 40px;
-  margin-top: 3%;
 }
 /* about section styling */
 .about{
  background-image: url("./src/aboutbg.avif");
  background-size: cover;
   background-attachment: fixed;
+}
+.my-pic{
+  width: 200px;
+  border-radius: 50%;
+  border: 3px solid;
+  margin-left: 42%;
 }
 
 /* services section styling */
@@ -253,7 +292,38 @@ section .title::after {
   margin: 10px 0 7px 0;
 }
 
+.about-me{
+  margin: 10px 0 7px 0;
+  text-align: center;
+  padding: 3%;
+}
+
+#resume-btn{
+  width: 30%;
+  height: 25%;
+  margin-top: 2%;
+  border: 1px solid rgb(71, 255, 80);
+  background-color:transparent;
+  color: #fff;
+  text-align: center;
+  font-size:25px;
+}
+#resume-btn:hover{
+  cursor: pointer;
+  background-color:rgb(71, 255, 80) ;
+  color: #000;
+  transition: 2s;
+}
+#resume-btn:active{
+    opacity: 0;
+    z-index: -1;
+    transform: scaleX(1.1) scaleY(1.3);
+    transition: transform 0.3s, opacity 0.3s;
+}
+
 /* skills section styling */
+
+
 .skills-images img {
   height: 150px;
   width: 150px;
@@ -263,6 +333,33 @@ section .title::after {
   transition: all 0.3s ease;
 }
 
+#skils-content-1{
+  display: flex;
+  gap: 2%;
+  width: 100%;
+  overflow:scroll;
+
+}
+#skils-content-1::-webkit-scrollbar{
+  display: none;
+}
+.skill-1{
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+  border: 0.5px solid rgb(71, 255, 80) ;
+}
+.skill-1>img{
+  height: 150px;
+  width: 150px;
+  transition: all 0.3s ease;
+  padding: 2%;
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+}
+.skill-1>img:hover{
+  cursor:pointer;
+  transition: all 0.3s ease;
+  background-color:rgb(71, 255, 80); ;
+  border:none;
+}
 
 /* project section styling */
 .project .title::after {
@@ -298,6 +395,34 @@ footer span a {
 footer span a:hover {
   text-decoration: underline;
 }
+
+
+/*   --------->     Conatct  <------------------*/
+
+.cont-box{
+  width: 100%;
+  align-items: center;
+  display: flex;
+  /* justify-content: center; */
+  border-radius: 10px;
+  transform: translateX(400%);
+  transition: transform 0.5s ease;
+  gap: 30px;
+}
+.cont-box>img{
+  width: 50px;
+}
+.cont-box>h2{
+  text-align: center;
+  margin-top: 1%;
+}
+.cont-box:nth-child(even){
+  transform: translateX(-400%);
+}
+.cont-box.show{
+  transform : translateX(0);
+}
+
 
 /* responsive media query start */
 @media (max-width: 1104px) {
