--- a/common.css
+++ b/common.css
@@ -234,15 +234,23 @@ section .title::after {
 }
 /* about section styling */
 .about{
- background-image: url("./src/aboutbg.avif");
+ background-image: url("./src/wall.jpg");
  background-size: cover;
   background-attachment: fixed;
 }
 .my-pic{
+  border: 2px solid;
+  text-align: center;
+/* display: flex;
+justify-content:center;
+align-items: center; */
+/* margin: 0 auto;
+width: 50%; */
+}
+.my-pic>img{
   width: 200px;
   border-radius: 50%;
   border: 3px solid;
-  margin-left: 42%;
 }
 
 /* services section styling */
@@ -304,14 +312,13 @@ section .title::after {
 }
 
 #resume-btn{
-  width: 30%;
-  height: 25%;
+  width: 150px;
   margin-top: 2%;
   border: 1px solid rgb(71, 255, 80);
   background-color:transparent;
   color: #fff;
   text-align: center;
-  font-size:25px;
+  font-size:1.5rem;
 }
 #resume-btn:hover{
   cursor: pointer;
@@ -387,19 +394,59 @@ section .title::after {
 
 /*   project   */
 
+.cont-box{
+  width: 100%;
+  border-radius: 10px;
+  transform: translateX(400%);
+  transition: transform 0.5s ease;
+  /* margin-left: 20%; */
+
+
+}
+.cont-box>img{
+  width: 50px;
+}
+.cont-box>h2{
+  text-align: center;
+  margin-top: 1%;
+}
+.cont-box:nth-child(even){
+  transform: translateX(-400%);
+}
+.cont-box.show{
+  transform : translateX(0);
+}
+.my-cont{
+  width: 75%;
+  display: block;
+}
+
 .project-main{
   display: flex;
-  justify-content:center;
+  /* justify-content:center; */
   width: 60%;
   border: 2px solid rgb(71, 255, 80);
-  padding: 2%;
-  gap: 5%;
+  padding: 10px;
+  gap: 1rem ;
   margin-top: 5%;
+  /* align-items: center; */
+  margin: 20px auto;
+}
+
+.inside-1{
+  /* border: 1px solid red; */
+  width: 50%;
+  /* height: 100%; */
+}
+.inside-2{
+  width: 50%;
+}
+.inside-2>div>h2{
+  font-size: 1.25rem;
 }
 .inside-1>img{
-
-  width: 350px;
-  height: 350px;
+  width: 100%;
+  height: 100%;
 }
 .resume-btn{
 width: 30%;
@@ -432,7 +479,12 @@ transition: 2s;
 
 /* contact section styling */
 .contact-content-1{
-  margin-left: 28%;
+  margin: 0 auto;
+  /* width: 100%; */
+}
+.contact-content-1>h2{
+
+  font-size: 1.25rem;
 }
 
 .contact .title::after {
@@ -456,39 +508,14 @@ footer span a:hover {
 
 /*   --------->     Conatct  <------------------*/
 
-.cont-box{
-  width: 100%;
-  border-radius: 10px;
-  transform: translateX(400%);
-  transition: transform 0.5s ease;
-  margin-left: 20%;
-
-}
-.cont-box>img{
-  width: 50px;
-}
-.cont-box>h2{
-  text-align: center;
-  margin-top: 1%;
-}
-.cont-box:nth-child(even){
-  transform: translateX(-400%);
-}
-.cont-box.show{
-  transform : translateX(0);
-}
 .my-cont{
-  width: 75%;
-  display: block;
+  margin: 0 auto;
+  width: 30%;
 }
-
-
 .my-cont>.cont-box-1{
-  width: 81%;
-  text-align: justify;
   display: flex;
+  margin: 0 auto;
   margin-top: 3%;
-  border: 2px solid;
   padding: 1.5%;
   background-color: #000;
 }
@@ -500,6 +527,7 @@ footer span a:hover {
 .my-cont>.cont-box-1>img+h2{
   margin-top: 4%;
   color: #111;
+  font-size: 1 rem;
 }
 .my-cont>.cont-box-1>img+h2>a{
   color: #111;
@@ -599,6 +627,37 @@ footer span a:hover {
   .services .serv-content .card {
     width: 100%;
   }
+  .project-main{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    border: 2px solid rgb(71, 255, 80);
+    padding: 10px;
+    gap: 1rem ;
+    margin-top: 5%;
+    /* align-items: center; */
+    margin: 20px auto;
+  }
+  .inside-1{
+    /* border: 1px solid red; */
+    width: 100%;
+    /* height: 100%; */
+  }
+  .inside-2{
+    width: 100%;
+  }
+  .inside-2>div>h2{
+    font-size: 1rem;
+  }
+  .inside-1>img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .my-cont{
+    margin: 0 auto;
+    width: 80%;
+  }
 }
 
 @media (max-width: 500px) {
@@ -629,5 +688,14 @@ footer span a:hover {
     width: 35px;
     font-size: 23px;
     line-height: 38px;
+  }
+  .project-main{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .my-cont{
+    margin: 0 auto;
+    width: 100%;
   }
 }
