--- a/common.css
+++ b/common.css
@@ -97,7 +97,7 @@ section .title::after {
 }
 .navbar.sticky {
   padding: 15px 0;
-  background: rgba(71, 255, 80, 0.363);
+  background: rgba(71, 255, 80, 0.731);
 }
 .navbar .max-width {
   display: flex;
@@ -176,7 +176,7 @@ section .title::after {
 /* home section styling */
 .home {
   display: flex;
-  background: url("./src/background.gif") no-repeat center;
+  background: url("./src/javawall.webp") no-repeat center;
   background-color: #111;
   height: 100vh;
   color: #fff;
@@ -310,10 +310,23 @@ width: 50%; */
   text-align: center;
   padding: 3%;
 }
+.abt-img{
+  text-align: center;
+
+}
+.abt-img>img{
+  width: 50px;
+  margin: 5px;
+}
+.abt-img>img:hover{
+  cursor: pointer;
+  width: 70px;
+  transition: 0.9s;
+}
 
 #resume-btn{
   width: 150px;
-  margin-top: 2%;
+  margin-top: 1.2rem;
   border: 1px solid rgb(71, 255, 80);
   background-color:transparent;
   color: #fff;
@@ -347,17 +360,15 @@ width: 50%; */
 
 #skils-content-1{
   display: flex;
-  gap: 2%;
+  flex-wrap: wrap;
+  gap: 2.5rem;;
   width: 100%;
-  overflow:scroll;
 
-}
-#skils-content-1::-webkit-scrollbar{
-  display: none;
 }
 .skill-1{
   /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
   border: 0.5px solid rgb(71, 255, 80) ;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .skill-1>img{
   height: 150px;
@@ -368,11 +379,20 @@ width: 50%; */
 }
 .skill-1>img:hover{
   cursor:pointer;
-  transition: all 0.3s ease;
-  background-color:rgb(71, 255, 80); ;
+  background-color:rgb(71, 255, 80); 
   border:none;
 }
-
+.skill-2{
+  border: 1px solid rgb(71, 255, 80);
+  padding: 10px;
+}
+.skill-2:hover{
+  cursor: pointer;
+  border: 3px solid rgb(71, 255, 80);
+}
+.soft{
+  margin-top: 2rem;
+}
 /* project section styling */
 .project .title::after {
   content: "see my work";
@@ -384,6 +404,10 @@ width: 50%; */
   text-align: center;
   overflow: hidden;
   transition: all 0.3s ease;
+}
+
+.pro-info{
+  padding: 1rem 0 1rem 0;
 }
 
 /*<-------------Edcuation--------------->*/
@@ -537,10 +561,10 @@ footer span a:hover {
 
 }
 .my-cont>.cont-box-1>img+h2{
-  color:wheat;
+  color: #fff;
 }
 .my-cont>.cont-box-1>img+h2>a{
-  color: wheat;
+  color: #fff;
 }
 
 /* responsive media query start */
