--- a/common.css
+++ b/common.css
@@ -7,9 +7,8 @@
   box-sizing: border-box;
   text-decoration: none;
 }
-body{
+body .cont-box{
   overflow-x: hidden;
-
 }
 html {
   scroll-behavior: smooth;
@@ -418,28 +417,42 @@ width: 50%; */
 
 /*   project   */
 
-.cont-box{
+/* .cont-box{
+  width: 100%;
+  border-radius: 10px;
+
+  transform: translateX(400%);
+  transition: transform 1500ms ease-in-out;
+} */
+
+.project-main{
   width: 100%;
   border-radius: 10px;
   transform: translateX(400%);
-  transition: transform 0.5s ease;
-  /* margin-left: 20%; */
-
-
+  transition: transform 1000ms ease-in-out;
 }
-.cont-box>img{
+
+/* .project-main:nth-child(even){
+  transform: translateX(400%);
+  transition: transform 1500ms ease-in-out;
+}
+.project-main:nth-child(odd){
+  transform: translateX(-400%);
+  transition: transform 1500ms ease-in-out; 
+}*/
+ .cont-box>img{
   width: 50px;
 }
 .cont-box>h2{
   text-align: center;
   margin-top: 1%;
 }
-.cont-box:nth-child(even){
+.project-main:nth-child(even){
   transform: translateX(-400%);
 }
-.cont-box.show{
+.project-main.show{
   transform : translateX(0);
-}
+} 
 .my-cont{
   width: 75%;
   display: block;
@@ -567,6 +580,77 @@ footer span a:hover {
   color: #fff;
 }
 
+
+#github-stats {
+    padding: 70px 0;
+}
+
+.github-stats-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    margin-top: 50px;
+    grid-gap: 40px;
+}
+
+
+.github-stat {
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+
+.github-stat img {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+
+.layer {
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), #de354c);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    transition: height 0.5s;
+}
+
+.layer h3 {
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.container{
+  text-align: center;
+}
+ /* a {
+    margin: 10px;
+    color: black;
+    text-decoration: none;
+    font-size: 30px;
+    padding: 10px 15px;
+    line-height: 80px;
+    background: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+} */
+
+.github-stat:hover img {
+    transform: scale(1.1);
+}
+
 /* responsive media query start */
 @media (max-width: 1104px) {
   .about .about-content .left img {
@@ -682,6 +766,12 @@ footer span a:hover {
     margin: 0 auto;
     width: 80%;
   }
+
+    .github-stat {
+      width: 300px;
+      font-size: 8px;
+  }
+
 }
 
 @media (max-width: 500px) {
@@ -722,4 +812,12 @@ footer span a:hover {
     margin: 0 auto;
     width: 100%;
   }
+  .github-stat {
+      width: 350px;
+      font-size: 8px;
+  }
+  .container{
+    text-align: center;
+  }
+
 }
