--- a/common.css
+++ b/common.css
@@ -216,7 +216,7 @@ section .title::after {
   margin-top: 20px;
   font-weight: 400;
   border-radius: 6px;
-  border: 2px solid rgb(71, 255, 80);
+  /* border: 2px solid rgb(71, 255, 80); */
   transition: all 0.3s ease;
 }
 .home .home-content a:hover {
@@ -481,7 +481,7 @@ width: 50%; */
   display: flex;
   /* justify-content:center; */
   width: 60%;
-  border: 2px solid rgb(71, 255, 80);
+  /* border: 2px solid rgb(71, 255, 80); */
   padding: 10px;
   gap: 1rem ;
   margin-top: 5%;
@@ -763,7 +763,7 @@ footer span a:hover {
     display: flex;
     flex-direction: column;
     width: 60%;
-    border: 2px solid rgb(71, 255, 80);
+    /* border: 2px solid rgb(71, 255, 80); */
     padding: 10px;
     gap: 1rem ;
     margin-top: 5%;
@@ -839,7 +839,7 @@ footer span a:hover {
     width: 100%;
   }
   .github-stat {
-      width: 350px;
+      width: 300px;
       font-size: 8px;
   }
   .container{
