--- a/common.css
+++ b/common.css
@@ -453,10 +453,13 @@ width: 50%; */
   border:none;
 }
 .skill-2{
-  padding: 10px;
+  padding: 15px;
+  border-radius: 10px;
+  border: 0.01px solid #000;
   transform: translateX(400%);
   transition: transform 1000ms ease-in-out;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+  rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .skill-2:nth-child(even){
   transform: translateX(-400%);
@@ -781,9 +784,8 @@ footer span a:hover {
 .skills-content-stat {
     display: flex;
     flex-wrap: wrap;
-    /* grid-template-columns: repeat(auto-fit, minmax(210px, auto)); */
-    justify-content: center;
-    gap: 1rem;
+    justify-content:center;
+    gap: 2rem;
     margin-top: 2rem;
     text-align: center;
 }
@@ -793,10 +795,10 @@ footer span a:hover {
     display: flex;
     flex-direction: column;
     border-radius: 0.5rem;
-    border-bottom: 2px solid var(--main-color);
-    /* box-shadow: 0 2px 7px rgba(14, 55, 54 /15%); */
    background-color: #111;
    color: #fff;
+   border-bottom: 2px solid var(--main-color);
+   /* box-shadow: 0 2px 7px rgba(14, 55, 54 /15%); */
 }
 .skills-box h3 {
     font-size: 1rem;
@@ -1010,6 +1012,10 @@ footer span a:hover {
   margin-top: -30%;
 } */
 
+.skills-content-stat{
+
+}
+
 }
 
 
@@ -1097,8 +1103,8 @@ footer span a:hover {
     background-color: #000;
   
   }
-  /* .contact{
+  .contact{
     margin-top: -30%;
-  } */
+  }
 
 }
