--- a/common.css
+++ b/common.css
@@ -189,7 +189,14 @@ section .title::after {
   font-size: 23px;
   cursor: pointer;
   display: none;
+
 }
+
+/* .resp-proj>span{
+  background-color: #000;
+  color: #f1f1f1;
+} */
+
 .scroll-up-btn {
   position: fixed;
   height: 45px;
