--- a/common.css
+++ b/common.css
@@ -197,6 +197,9 @@ section .title::after {
   color: #f1f1f1;
 } */
 
+/* .skills-container1{
+  padding-bottom: 50px;
+} */
 .scroll-up-btn {
   position: fixed;
   height: 45px;
